fix overflow

--- a/eagle/static/css/index.css
+++ b/eagle/static/css/index.css
@@ -88,7 +88,8 @@ section {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    height: 100vh;
+    min-height: 100vh;
+    padding-bottom: 50px;
 }
 
 .section-title {
